k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookshop
  namespace: bookshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bookshop
  template:
    metadata:
      labels:
        app: bookshop
    spec:
      containers:
        - name: bookshop
          image: ghcr.io/limerio/dart-web-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /api/books
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/books
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
