k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookshop-ingress
  namespace: bookshop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: bookshop.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookshop-api-service
                port:
                  number: 80
